fixing issue with iframe size on mobile devices

--- a/src/components/blog/Article.css
+++ b/src/components/blog/Article.css
@@ -84,7 +84,7 @@
         margin-left: 7%;
     }
 
-    .article-container article .content :is(img, video){
+    .article-container article .content :is(img, video, iframe){
         width: 70%;
         height: auto;
         object-fit: fill;
